# cogenerics

./: cogenerics.cabal
src/Cogenerics/Internal/: Core.hs  Utils.hs
test/: simple.hs
