name:                cogenerics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/cogenerics#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Cogenerics.Internal
    Cogenerics.Internal.Core
    Cogenerics.Internal.Utils
  build-depends:
    base >= 4.9 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite simple
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             simple.hs
  build-depends:
    cogenerics,
    base
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/cogenerics
